# doudou_ws

./: .gitignore
src/doudou_descriptions/: CMakeLists.txt  package.xml
src/doudou_descriptions/launch/: display_doudou.launch  display_tracer.launch  display_wx250s_left.launch  test_d435.launch
src/doudou_descriptions/meshes/connector_meshes/: connector_L.dae  connector_T.dae
src/doudou_descriptions/rviz/: doudou_display.rviz  tracer_display.rviz
src/doudou_descriptions/urdf/urdf_doudou/: doudou.gazebo  doudou.xacro
src/doudou_descriptions/urdf/urdf_doudou/urdf_frame/: frame.gazebo  frame.xacro  frame_300mm.xacro  frame_400mm.xacro  frame_500mm.xacro  frame_800mm.xacro  frame_connector_L.xacro  frame_connector_T.xacro
src/doudou_descriptions/urdf/urdf_doudou/urdf_virtual/: virtual.xacro  virtual_joint.xacro  virtual_link.xacro
src/doudou_descriptions/urdf/urdf_realsense/: d435.gazebo.xacro  d435_left.xacro  d435_middle.xacro  d435_right.xacro
src/doudou_descriptions/urdf/urdf_realsense/urdf_d435/: d435_base_link.xacro  d435_bottom_screw_frame_link.xacro  (+9 more)
src/doudou_descriptions/urdf/urdf_tracer/: fl_castor.xacro  fl_wheel.xacro  fr_castor.xacro  fr_wheel.xacro  rl_castor.xacro  rl_wheel.xacro  rr_castor.xacro  rr_wheel.xacro  tracer.gazebo.xacro  tracer.xacro  tracer_base_link.xacro  tracer_wheel_1.xacro  tracer_wheel_2.xacro
src/doudou_descriptions/urdf/urdf_wx250s/: demostrator_left.gazebo  demostrator_left.xacro  demostrator_right.gazebo  demostrator_right.xacro  wx250s_left.gazebo  wx250s_left.xacro  wx250s_right.gazebo  wx250s_right.xacro
(+23 files in other folders)
