<?xml version="1.0"?>

<package format="2">
	
	<name>doudou_description</name>
	<version>0.0.0</version>
	<description>The doudou_description package</description>
	<maintainer email="xiaodoudou1419@gmail.com">zhenzhen</maintainer>
	<license>TODO</license>
	<!-- <url type="website">http://wiki.ros.org/tracer_description</url> -->
	<author email="xiaodoudou1419@gmail.com">zhenzhen</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>urdf</build_depend>
	<build_depend>xacro</build_depend>
	<build_export_depend>urdf</build_export_depend>
	<build_export_depend>xacro</build_export_depend>
	<exec_depend>urdf</exec_depend>
	<exec_depend>xacro</exec_depend>

</package>
